--- a/404.html
+++ b/404.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    NOT FOUND.
+    <script src="js/basic.js"></script>
+  <script src="js/generate.js"></script>
 </body>
 </html>
