--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
 <body>
   <script src="js/basic.js"></script>
   <script src="js/generate.js"></script>
-  <script src="js/page/index.js" type="text/javascript" charset="utf-8"></script>
+  <script src="pages/index.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
