--- a/not-index.html
+++ b/not-index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/w3-css/4.1.0/w3.css" integrity="sha512-Ef5r/bdKQ7JAmVBbTgivSgg3RM+SLRjwU0cAgySwTSv4+jYcVeDukMp+9lZGWT78T4vCUxgT3g+E8t7uabwRuw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/w3-css/4.1.0/w3.css"/>
   <title>Rokade</title>
 </head>
 <body>
@@ -18,8 +18,6 @@
   <br><br>by the way, Rokade means <a href="https://en.m.wikipedia.org/wiki/Castling">Castling</a> in Indonesian.
   </p>
   <hr>
-  <h2>Quick Updates</h2>
-  <p>3/2/23 no new updates for today.</p>
   <h2>New Album Progress</h2>
   <div>58%</div>
 </body>
