--- a/404.html
+++ b/404.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- <title>Document</title> -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/w3-css/4.1.0/w3.css"/>
+
 </head>
 <body>
-    NOT FOUND.
     <script src="js/basic.js"></script>
   <script src="js/generate.js"></script>
+  <script src="pages/404.js"></script>
 </body>
 </html>
