(very) breaking changes

--- a/404.html
+++ b/404.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <script src="js/basic.js"></script>
-  <script src="js/generate.js"></script>
-  <script src="pages/404.js"></script>
+  <script src="js/basic.js"></script>
+  <script src="pg/main.js"></script>
+  <script>notFoundPage()</script>
 </body>
 </html>
