--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script src="js/basic.js"></script>
-  <script src="js/generate.js"></script>
-  <script src="pages/index.js" type="text/javascript" charset="utf-8"></script>
+  <script src="pg/main.js"></script>
+  <script>indexPage()</script>
 </body>
 </html>
