--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 </head>
 <body>
   <script src="js/basic.js"></script>
-  <script src="pg/main.js"></script>
-  <script>indexPage()</script>
+  <script src="pg/index.js"></script>
 </body>
 </html>
